bugfix overflow

--- a/webdev/main.css
+++ b/webdev/main.css
@@ -5,6 +5,7 @@ body {
     font-family: sans-serif;
     font-size: 16px;
     margin: 0;
+    overflow: hidden;
 }
 
 h2 {
@@ -19,7 +20,6 @@ FLAGG
     padding-top: 16px;
     width: 20px;
     height: 14px;
-    perspective: 1000px;
     z-index: 200;
     margin-left: 20px;
 }
@@ -219,6 +219,7 @@ RULLETEKST
     animation-name: credits;
     animation-play-state: running;
 }
+
 /*
 RULLETEKST SLUTT
  */
@@ -227,7 +228,7 @@ RULLETEKST SLUTT
 
 .container-fun-fact {
     height: 60%;
-    width: 30%;
+    width: 29%;
     position: absolute;
     top: 45%;
     left: 85%;
@@ -376,7 +377,7 @@ BILDE GALLERI
     height: 30%;
     width: 30%;
     max-height: 70vh;
-    position: fixed;
+    position: absolute;
     border: 2px transparent solid;
     border-radius: 15px;
     background-color: transparent;
